--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ comment:
     
 # Social
 social:
-    github: https://github.com/kekeYezi
+    github: kekeYezi
     mail: kekeyezi1992@163.com
 
 # Google Analytics
